plugins {
	id 'java'
	id 'org.springframework.boot' version '3.5.3'
	id 'io.spring.dependency-management' version '1.1.7'
}

group = 'com.swyp'
version = '0.0.1-SNAPSHOT'

java {
	toolchain {
		languageVersion = JavaLanguageVersion.of(17)
	}
}

configurations {
	compileOnly {
		extendsFrom annotationProcessor
	}
}

repositories {
	mavenCentral()
}

dependencies {
	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
	implementation 'org.springframework.boot:spring-boot-starter-oauth2-client'
	implementation 'org.springframework.boot:spring-boot-starter-security'
	implementation 'org.springframework.boot:spring-boot-starter-web'
	compileOnly 'org.projectlombok:lombok'
	runtimeOnly 'com.mysql:mysql-connector-j'
	annotationProcessor 'org.projectlombok:lombok'
	testImplementation 'org.springframework.boot:spring-boot-starter-test'
	testImplementation 'org.springframework.security:spring-security-test'
	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
	// Swagger
	implementation group: 'org.springdoc', name: 'springdoc-openapi-starter-webmvc-ui', version: '2.8.9'
	// Spring Cloud AWS
	implementation "io.awspring.cloud:spring-cloud-aws-starter-s3:3.3.1"
	// S3
	implementation group: 'com.amazonaws', name: 'aws-java-sdk-s3', version: '1.12.787'

	//jwt
	implementation 'io.jsonwebtoken:jjwt-api:0.11.5'
	runtimeOnly   'io.jsonwebtoken:jjwt-impl:0.11.5'
	runtimeOnly   'io.jsonwebtoken:jjwt-jackson:0.11.5'

	// Milvus Java SDK
	implementation group: 'io.milvus', name: 'milvus-sdk-java', version: '2.5.10'
	// Flyway
	implementation group: 'org.flywaydb', name: 'flyway-mysql', version: '11.10.2'
	implementation 'org.flywaydb:flyway-core'

	//Spring Batch
	implementation 'org.springframework.boot:spring-boot-starter-batch'
	implementation 'org.springframework.batch:spring-batch-core'
	testImplementation 'org.springframework.batch:spring-batch-test'
	implementation 'jakarta.persistence:jakarta.persistence-api'
  
	// Tika
	implementation 'org.apache.tika:tika-core:3.1.0'
}

tasks.named('test') {
	useJUnitPlatform()
}
